--- a/plataformas/grado_3.html
+++ b/plataformas/grado_3.html
@@ -1375,8 +1375,8 @@ Cuando la <span class="keyword">fábrica<span class="keyword-tooltip">Lugar dond
                 if (error) throw error;
                 
                 if (data.grado !== state.grade) {
-                    alert('Este código pertenece a grado ' + data.grado + '. Redirigiendo...');
-                    window.location.href = 'grado_' + data.grado + '.html?student=' + state.studentCode;
+                    // Redirigir directamente sin alert que puede causar bucles
+                    window.location.replace('grado_' + data.grado + '.html?student=' + state.studentCode);
                     return;
                 }
                 
