--- a/plataformas/grado_5.html
+++ b/plataformas/grado_5.html
@@ -1240,7 +1240,7 @@
         let state = {
             studentCode: null,
             studentName: null,
-            grade: 4,
+            grade: 5,
             ciclo: 1,
             timerInterval: null,
             startTime: null,
@@ -1293,8 +1293,8 @@
                 if (error) throw error;
                 
                 if (data.grado !== state.grade) {
-                    alert('Este código pertenece a grado ' + data.grado + '. Redirigiendo...');
-                    window.location.href = 'grado_' + data.grado + '.html?student=' + state.studentCode;
+                    // Redirigir directamente sin alert que puede causar bucles
+                    window.location.replace('grado_' + data.grado + '.html?student=' + state.studentCode);
                     return;
                 }
                 
