--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Ingresar <span id="spinner" class="spinner" style="display:none"></span>
     <button onclick="window.location.href='ranking.html'" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: #fff; padding: 10px 20px; border: none; border-radius: 8px; cursor: pointer; font-weight: 600; font-size: 14px; margin-bottom: 15px; transition: all 0.3s; display: block; width: 100%;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 15px rgba(0,0,0,0.2)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'">
         🏆 Ver Ranking en Tiempo Real
     </button>
-    <button onclick="window.location.href='consultar_usuario.html'" style="background: linear-gradient(135deg, #28a745 0%, #34ce57 100%); color: #fff; padding: 10px 20px; border: none; border-radius: 8px; cursor: pointer; font-weight: 600; font-size: 14px; transition: all 0.3s; display: block; width: 100%;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 15px rgba(0,0,0,0.2)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'">
+    <button onclick="window.location.href='consultar.html'" style="background: linear-gradient(135deg, #28a745 0%, #34ce57 100%); color: #fff; padding: 10px 20px; border: none; border-radius: 8px; cursor: pointer; font-weight: 600; font-size: 14px; transition: all 0.3s; display: block; width: 100%;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 15px rgba(0,0,0,0.2)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'">
         🔍 Consultar Usuario (Padres de Familia)
     </button>
 </div>
